--- a/src/components/GitUsers.scss
+++ b/src/components/GitUsers.scss
@@ -1,6 +1,7 @@
 .container {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -9,5 +10,10 @@
   &__inner {
     max-width: 800px;
     width: 100%;
+    padding: 20px;
+
+    @media (max-width: 768px) {
+      padding: 20px 20px 40px 20px;
+    }
   }
 }
