--- a/src/components/User.scss
+++ b/src/components/User.scss
@@ -5,6 +5,10 @@
   border-radius: 15px;
   margin-top: 100px;
 
+  @media (max-width: 1023px) {
+    margin-top: 50px;
+  }
+
   &__error {
     margin: 0 auto;
     font-style: normal;
@@ -18,6 +22,10 @@
 
   &__holder {
     padding: 40px;
+
+    @media (max-width: 768px) {
+      padding: 20px 20px;
+    }
   }
 
   &__name {
@@ -29,6 +37,10 @@
     font-size: 30px;
     line-height: 39px;
     color: var(--color-text-main);
+
+    @media (max-width: 1023px) {
+      font-size: 26px;
+    }
 
     img {
       width: 100px;
@@ -50,33 +62,45 @@
       margin-left: 10px;
       font-size: 22px;
       color: var(--color-text-main);
+
+      @media (max-width: 1023px) {
+        font-size: 20px;
+      }
     }
   }
 
   &__box {
     min-height: 60px;
     margin-top: 30px;
-    padding: 10px 35px;
+    padding: 20px 35px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    align-items: baseline;
+    gap: 20px 10px;
     background: var(--color-bg-secondary);
     border-radius: 10px;
-    gap: 0 10px;
   }
 
   &__info {
-    width: calc(100% / 3 - 30px);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
     color: var(--color-text-secondary);
+    gap: 5px 10px;
 
     h3 {
-      margin-top: 6px;
       font-size: 19px;
       color: var(--color-text-main);
+
+      @media (max-width: 1023px) {
+        font-size: 17px;
+      }
     }
   }
 }
