--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -15,7 +15,7 @@
   color: var(--color-text-main);
 }
 
-.dark-mode-button {
+.theme-button {
   all: unset;
   font-style: normal;
   font-weight: 700;
